--- a/Minesweeper/Views/Base.lproj/Main.storyboard
+++ b/Minesweeper/Views/Base.lproj/Main.storyboard
@@ -21,27 +21,24 @@
                                 <rect key="frame" x="0.0" y="128" width="414" height="768"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Xh3-N5-l5N" userLabel="TitleStackView">
-                                        <rect key="frame" x="69" y="0.0" width="276" height="160"/>
+                                        <rect key="frame" x="69" y="0.0" width="276" height="153.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Minesweeper!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PXu-U3-u7Z">
-                                                <rect key="frame" x="0.0" y="0.0" width="276" height="77.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="276" height="74.5"/>
                                                 <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="40"/>
                                                 <color key="textColor" red="0.092556603187550435" green="0.19203083039100161" blue="0.92928432679999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mine-icon-black-50" translatesAutoresizingMaskIntoConstraints="NO" id="WcF-cI-cqK">
-                                                <rect key="frame" x="0.0" y="82.5" width="276" height="77.5"/>
+                                                <rect key="frame" x="0.0" y="79.5" width="276" height="74"/>
                                             </imageView>
                                         </subviews>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="160" id="KX1-i5-sCn"/>
-                                        </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="Qu6-Bo-UaI" userLabel="ButtonsStackView">
-                                        <rect key="frame" x="60" y="244" width="294" height="300"/>
+                                        <rect key="frame" x="60" y="238" width="294" height="307.5"/>
                                         <subviews>
                                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3EP-2G-fIO">
-                                                <rect key="frame" x="0.0" y="0.0" width="294" height="73.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="294" height="76"/>
                                                 <color key="backgroundColor" red="0.82033967971801758" green="0.82096666097640991" blue="0.82043677568435669" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="28"/>
                                                 <state key="normal" title="Beginner"/>
@@ -55,7 +52,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HtK-OO-ucH">
-                                                <rect key="frame" x="0.0" y="113.5" width="294" height="73"/>
+                                                <rect key="frame" x="0.0" y="116" width="294" height="75.5"/>
                                                 <color key="backgroundColor" red="0.82033967971801758" green="0.82096666097640991" blue="0.82043677568435669" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="28"/>
                                                 <state key="normal" title="Intermediate"/>
@@ -69,7 +66,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mgT-bQ-tgo">
-                                                <rect key="frame" x="0.0" y="226.5" width="294" height="73.5"/>
+                                                <rect key="frame" x="0.0" y="231.5" width="294" height="76"/>
                                                 <color key="backgroundColor" white="0.77814640410958902" alpha="1" colorSpace="calibratedWhite"/>
                                                 <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="28"/>
                                                 <state key="normal" title="Advanced"/>
@@ -83,15 +80,12 @@
                                                 </connections>
                                             </button>
                                         </subviews>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="300" id="vdb-8X-k64" userLabel="height = 240"/>
-                                        </constraints>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mB7-wW-KE4" userLabel="FooterView">
-                                        <rect key="frame" x="0.0" y="648" width="414" height="120"/>
+                                        <rect key="frame" x="0.0" y="645" width="414" height="123"/>
                                         <subviews>
                                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l7k-ts-zQa" userLabel="Best Times Button">
-                                                <rect key="frame" x="80" y="41" width="254" height="38"/>
+                                                <rect key="frame" x="80" y="42.5" width="254" height="38"/>
                                                 <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="25"/>
                                                 <state key="normal" title="Best Times"/>
@@ -110,16 +104,18 @@
                                             <constraint firstItem="l7k-ts-zQa" firstAttribute="leading" secondItem="mB7-wW-KE4" secondAttribute="leading" constant="80" id="ITI-4D-X3V"/>
                                             <constraint firstItem="l7k-ts-zQa" firstAttribute="centerY" secondItem="mB7-wW-KE4" secondAttribute="centerY" id="Lif-3H-JTf"/>
                                             <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="l7k-ts-zQa" secondAttribute="trailing" constant="80" id="cLR-U0-Z0p"/>
-                                            <constraint firstAttribute="height" constant="120" id="dNF-TP-Fbs"/>
                                         </constraints>
                                     </view>
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="mB7-wW-KE4" secondAttribute="bottom" id="CLH-7X-1IG"/>
+                                    <constraint firstItem="Qu6-Bo-UaI" firstAttribute="height" secondItem="ijG-45-RJ9" secondAttribute="height" multiplier="0.4" id="QuH-77-dZx"/>
                                     <constraint firstAttribute="trailing" secondItem="mB7-wW-KE4" secondAttribute="trailing" id="b1d-GC-7Ib"/>
+                                    <constraint firstItem="Xh3-N5-l5N" firstAttribute="height" secondItem="ijG-45-RJ9" secondAttribute="height" multiplier="0.2" id="dEx-Zd-dbb"/>
                                     <constraint firstItem="Qu6-Bo-UaI" firstAttribute="leading" secondItem="ijG-45-RJ9" secondAttribute="leading" constant="60" id="dXe-xm-cX8"/>
                                     <constraint firstAttribute="trailing" secondItem="Qu6-Bo-UaI" secondAttribute="trailing" constant="60" id="fjh-Mw-565"/>
                                     <constraint firstItem="mB7-wW-KE4" firstAttribute="leading" secondItem="ijG-45-RJ9" secondAttribute="leading" id="gFM-LB-Jyw"/>
+                                    <constraint firstItem="mB7-wW-KE4" firstAttribute="height" secondItem="ijG-45-RJ9" secondAttribute="height" multiplier="0.16" id="qNa-Oj-IXe"/>
                                 </constraints>
                             </stackView>
                         </subviews>
