--- a/Minesweeper/Views/Base.lproj/Main.storyboard
+++ b/Minesweeper/Views/Base.lproj/Main.storyboard
@@ -18,10 +18,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ijG-45-RJ9">
-                                <rect key="frame" x="0.0" y="128" width="414" height="768"/>
+                                <rect key="frame" x="0.0" y="128" width="414" height="769"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Xh3-N5-l5N" userLabel="TitleStackView">
-                                        <rect key="frame" x="69" y="0.0" width="276" height="153.5"/>
+                                        <rect key="frame" x="69" y="0.0" width="276" height="154"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Minesweeper!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PXu-U3-u7Z">
                                                 <rect key="frame" x="0.0" y="0.0" width="276" height="74.5"/>
@@ -30,15 +30,19 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mine-icon-black-50" translatesAutoresizingMaskIntoConstraints="NO" id="WcF-cI-cqK">
-                                                <rect key="frame" x="0.0" y="79.5" width="276" height="74"/>
+                                                <rect key="frame" x="0.0" y="79.5" width="276" height="74.5"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="74" id="Jgh-uw-n4g"/>
+                                                    <constraint firstAttribute="width" constant="276" id="yk4-dm-8we"/>
+                                                </constraints>
                                             </imageView>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="Qu6-Bo-UaI" userLabel="ButtonsStackView">
-                                        <rect key="frame" x="60" y="238" width="294" height="307.5"/>
+                                        <rect key="frame" x="60" y="238.5" width="294" height="307.5"/>
                                         <subviews>
                                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3EP-2G-fIO">
-                                                <rect key="frame" x="0.0" y="0.0" width="294" height="76"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="294" height="75.5"/>
                                                 <color key="backgroundColor" red="0.82033967971801758" green="0.82096666097640991" blue="0.82043677568435669" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="28"/>
                                                 <state key="normal" title="Beginner"/>
@@ -52,7 +56,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HtK-OO-ucH">
-                                                <rect key="frame" x="0.0" y="116" width="294" height="75.5"/>
+                                                <rect key="frame" x="0.0" y="115.5" width="294" height="76"/>
                                                 <color key="backgroundColor" red="0.82033967971801758" green="0.82096666097640991" blue="0.82043677568435669" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="28"/>
                                                 <state key="normal" title="Intermediate"/>
@@ -82,7 +86,7 @@
                                         </subviews>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mB7-wW-KE4" userLabel="FooterView">
-                                        <rect key="frame" x="0.0" y="645" width="414" height="123"/>
+                                        <rect key="frame" x="0.0" y="646" width="414" height="123"/>
                                         <subviews>
                                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l7k-ts-zQa" userLabel="Best Times Button">
                                                 <rect key="frame" x="80" y="42.5" width="254" height="38"/>
