--- a/Minesweeper/Views/Base.lproj/Main.storyboard
+++ b/Minesweeper/Views/Base.lproj/Main.storyboard
@@ -279,10 +279,12 @@
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LYL-dm-qSZ" userLabel="SoundsToggle">
                                 <rect key="frame" x="354" y="822" width="40" height="40"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="P7V-da-9Y6"/>
                                     <constraint firstAttribute="width" constant="40" id="V0U-AK-sgv"/>
                                 </constraints>
+                                <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" image="speaker.fill" catalog="system"/>
                                 <connections>
                                     <action selector="soundsTogglePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gTw-yW-sA7"/>
