--- a/Minesweeper/Views/Base.lproj/Main.storyboard
+++ b/Minesweeper/Views/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Minesweeper!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PXu-U3-u7Z">
                                                 <rect key="frame" x="0.0" y="0.0" width="276" height="74.5"/>
                                                 <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="40"/>
-                                                <color key="textColor" red="0.092556603187550435" green="0.19203083039100161" blue="0.92928432679999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="textColor" red="0.0" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mine-icon-black-50" translatesAutoresizingMaskIntoConstraints="NO" id="WcF-cI-cqK">
@@ -44,7 +44,9 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="294" height="76"/>
                                                 <color key="backgroundColor" red="0.82033967971801758" green="0.82096666097640991" blue="0.82043677568435669" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="28"/>
-                                                <state key="normal" title="Beginner"/>
+                                                <state key="normal" title="Beginner">
+                                                    <color key="titleColor" red="0.0" green="0.50196078430000002" blue="0.50196078430000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                         <integer key="value" value="5"/>
@@ -58,7 +60,9 @@
                                                 <rect key="frame" x="0.0" y="116" width="294" height="75.5"/>
                                                 <color key="backgroundColor" red="0.82033967971801758" green="0.82096666097640991" blue="0.82043677568435669" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="28"/>
-                                                <state key="normal" title="Intermediate"/>
+                                                <state key="normal" title="Intermediate">
+                                                    <color key="titleColor" red="0.0" green="0.50196078430000002" blue="0.50196078430000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                         <integer key="value" value="5"/>
@@ -72,7 +76,9 @@
                                                 <rect key="frame" x="0.0" y="231.5" width="294" height="76"/>
                                                 <color key="backgroundColor" white="0.77814640410958902" alpha="1" colorSpace="calibratedWhite"/>
                                                 <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="28"/>
-                                                <state key="normal" title="Advanced"/>
+                                                <state key="normal" title="Advanced">
+                                                    <color key="titleColor" red="0.0" green="0.50196078430000002" blue="0.50196078430000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                         <integer key="value" value="5"/>
@@ -91,7 +97,9 @@
                                                 <rect key="frame" x="80" y="42.5" width="254" height="38"/>
                                                 <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="25"/>
-                                                <state key="normal" title="Best Times"/>
+                                                <state key="normal" title="Best Times">
+                                                    <color key="titleColor" red="0.0" green="0.50196078430000002" blue="0.50196078430000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                         <integer key="value" value="5"/>
@@ -277,14 +285,14 @@
                                 </connections>
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LYL-dm-qSZ" userLabel="SoundsToggle">
-                                <rect key="frame" x="354" y="822" width="40" height="40"/>
+                                <rect key="frame" x="364" y="822" width="40" height="40"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="P7V-da-9Y6"/>
                                     <constraint firstAttribute="width" constant="40" id="V0U-AK-sgv"/>
                                 </constraints>
                                 <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" image="speaker.fill" catalog="system"/>
+                                <state key="normal" image="speaker.2.fill" catalog="system"/>
                                 <connections>
                                     <action selector="soundsTogglePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gTw-yW-sA7"/>
                                 </connections>
@@ -300,7 +308,7 @@
                             <constraint firstItem="Cha-Yd-rC7" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.16" id="WCb-N5-tfT"/>
                             <constraint firstItem="LYL-dm-qSZ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="kUq-Lg-4e5"/>
                             <constraint firstItem="Cha-Yd-rC7" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="nEE-Ap-3ld"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LYL-dm-qSZ" secondAttribute="trailing" constant="20" id="pZT-YW-DMB"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LYL-dm-qSZ" secondAttribute="trailing" constant="10" id="pZT-YW-DMB"/>
                             <constraint firstItem="Cha-Yd-rC7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="pea-WS-hHW"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -325,36 +333,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nBh-3s-7mR">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nBh-3s-7mR">
                                 <rect key="frame" x="0.0" y="160" width="414" height="702"/>
                                 <color key="backgroundColor" red="0.86299999999999999" green="0.86299999999999999" blue="0.86299999999999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BestTimesTableViewCell" rowHeight="30" id="xe3-zC-oTM" customClass="BestTimesTableViewCell" customModule="Minesweeper" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="30"/>
+                                    <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="BestTimesTableViewCell" rowHeight="70" id="xe3-zC-oTM" customClass="BestTimesTableViewCell" customModule="Minesweeper" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="70"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xe3-zC-oTM" id="CSy-nb-5Hi">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="30"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="70"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sz6-we-u2w" userLabel="positionLabel">
-                                                    <rect key="frame" x="0.0" y="0.0" width="138" height="30"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="138" height="70"/>
                                                     <color key="backgroundColor" red="0.86299999999999999" green="0.86299999999999999" blue="0.86299999999999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="25"/>
-                                                    <color key="textColor" red="0.092556603190000003" green="0.19203083039999999" blue="0.92928432679999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fiona" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5t7-HO-ZAf" userLabel="nameLabel">
-                                                    <rect key="frame" x="138" y="0.0" width="137.5" height="30"/>
+                                                    <rect key="frame" x="138" y="0.0" width="137.5" height="70"/>
                                                     <color key="backgroundColor" red="0.86299999999999999" green="0.86299999999999999" blue="0.86299999999999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="25"/>
-                                                    <color key="textColor" red="0.092556603190000003" green="0.19203083039999999" blue="0.92928432679999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="37s" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PLN-nb-1W5" userLabel="timeLabel">
-                                                    <rect key="frame" x="275.5" y="0.0" width="138" height="30"/>
+                                                    <rect key="frame" x="276" y="0.0" width="138" height="70"/>
                                                     <color key="backgroundColor" red="0.86299999999999999" green="0.86299999999999999" blue="0.86299999999999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="25"/>
-                                                    <color key="textColor" red="0.092556603190000003" green="0.19203083039999999" blue="0.92928432679999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -363,6 +372,7 @@
                                                 <constraint firstItem="PLN-nb-1W5" firstAttribute="leading" secondItem="5t7-HO-ZAf" secondAttribute="trailing" id="80p-sH-w8Z"/>
                                                 <constraint firstItem="5t7-HO-ZAf" firstAttribute="leading" secondItem="Sz6-we-u2w" secondAttribute="trailing" id="mNd-iE-Pmb"/>
                                                 <constraint firstItem="PLN-nb-1W5" firstAttribute="width" secondItem="CSy-nb-5Hi" secondAttribute="width" multiplier="0.333" id="ocI-8E-7GF"/>
+                                                <constraint firstAttribute="trailing" secondItem="PLN-nb-1W5" secondAttribute="trailing" id="qe5-Oe-7Hf"/>
                                                 <constraint firstItem="Sz6-we-u2w" firstAttribute="leading" secondItem="CSy-nb-5Hi" secondAttribute="leading" id="zzG-eD-bsG"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -408,7 +418,7 @@
                         </subviews>
                         <color key="backgroundColor" red="0.86299999999999999" green="0.86299999999999999" blue="0.86299999999999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="nBh-3s-7mR" secondAttribute="trailing" id="Swo-aR-BdM"/>
+                            <constraint firstItem="AcU-H8-q71" firstAttribute="trailing" secondItem="nBh-3s-7mR" secondAttribute="trailing" id="Swo-aR-BdM"/>
                             <constraint firstItem="AcU-H8-q71" firstAttribute="bottom" secondItem="nBh-3s-7mR" secondAttribute="bottom" id="fPK-hb-0iq"/>
                             <constraint firstItem="V0N-mb-mx3" firstAttribute="top" secondItem="AcU-H8-q71" secondAttribute="top" id="hqN-aW-1J0"/>
                             <constraint firstItem="AcU-H8-q71" firstAttribute="trailing" secondItem="V0N-mb-mx3" secondAttribute="trailing" id="jnt-Kg-Tv5"/>
@@ -465,6 +475,6 @@
         <image name="icon-game-over" width="48" height="48"/>
         <image name="icon-happy-48" width="48" height="48"/>
         <image name="mine-icon-black-50" width="50" height="50"/>
-        <image name="speaker.fill" catalog="system" width="128" height="121"/>
+        <image name="speaker.2.fill" catalog="system" width="128" height="97"/>
     </resources>
 </document>
