--- a/Minesweeper/Views/Base.lproj/Main.storyboard
+++ b/Minesweeper/Views/Base.lproj/Main.storyboard
@@ -291,7 +291,7 @@
                                     <constraint firstAttribute="height" constant="40" id="P7V-da-9Y6"/>
                                     <constraint firstAttribute="width" constant="40" id="V0U-AK-sgv"/>
                                 </constraints>
-                                <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" red="0.0" green="0.50196078430000002" blue="0.50196078430000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" image="speaker.2.fill" catalog="system"/>
                                 <connections>
                                     <action selector="soundsTogglePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gTw-yW-sA7"/>
